--- a/Results/report.html
+++ b/Results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,34679],[],[[5,0,0,[],[1,505,4968],[]],[6,0,7,[8],[1,5473,22090],[]],[9,0,7,[10],[0,27565,7111,11],[]]],[],[3,2,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,78740],[],[[5,0,0,[],[1,263,3804],[]],[6,0,7,[8],[1,4069,38248],[]],[9,0,7,[10],[0,42317,36423,11],[]]],[],[3,2,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Amazon","*C:\\Users\\SURFACE\\Desktop\\CRM\\amazon_automation_test\\Tests\\amazon.robot","*../Tests/amazon.robot","*<p>first test\x3c/p>","*Should be able to login","*User can search for product","*<p>This is some basic TEST\x3c/p>","*Current","*User must sign in to checkout","*Smoke","*Element with locator 'id=twotabsearchtextbox' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Amazon","*C:\\Users\\SURFACE\\Desktop\\CRM\\amazon_automation_test\\tests\\amazon.robot","*../tests/amazon.robot","*<p>first test\x3c/p>","*Should be able to login","*User can search for product","*<p>This is some basic TEST\x3c/p>","*Current","*User must sign in to checkout","*Smoke","*Element with locator 'id=twotabsearchtextbox' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:34","fail":1,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:22","fail":0,"label":"Current","pass":1,"skip":0},{"elapsed":"00:00:07","fail":1,"label":"Smoke","pass":0,"skip":0}],[{"elapsed":"00:00:35","fail":1,"id":"s1","label":"Amazon","name":"Amazon","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:18","fail":1,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:38","fail":0,"label":"Current","pass":1,"skip":0},{"elapsed":"00:00:36","fail":1,"label":"Smoke","pass":0,"skip":0}],[{"elapsed":"00:01:19","fail":1,"id":"s1","label":"Amazon","name":"Amazon","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1739770034133;
+window.output["baseMillis"] = 1739813683012;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 34740;
+window.output["generated"] = 78758;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
