--- a/Results/report.html
+++ b/Results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,78740],[],[[5,0,0,[],[1,263,3804],[]],[6,0,7,[8],[1,4069,38248],[]],[9,0,7,[10],[0,42317,36423,11],[]]],[],[3,2,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,86735],[],[[5,0,0,[],[1,736,4779],[]],[6,0,7,[8],[1,5516,10332],[]],[9,0,10,[8],[0,15850,20122,11],[]],[12,0,13,[14],[0,35976,28415,15],[]],[16,0,17,[14],[0,64394,22337,15],[]]],[],[5,2,3,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Amazon","*C:\\Users\\SURFACE\\Desktop\\CRM\\amazon_automation_test\\tests\\amazon.robot","*../tests/amazon.robot","*<p>first test\x3c/p>","*Should be able to login","*User can search for product","*<p>This is some basic TEST\x3c/p>","*Current","*User must sign in to checkout","*Smoke","*Element with locator 'id=twotabsearchtextbox' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Amazon","*C:\\Users\\SURFACE\\Desktop\\CRM\\amazon_automation_test\\tests\\amazon.robot","*../tests/amazon.robot","*<p>first test\x3c/p>","*Should be able to login","*User can search for product","*<p>This is Search for Product TEST\x3c/p>","*Current","*User can search and view product","*<p>This is Search and View Product TEST\x3c/p>","*Text 'Back to results' did not appear in 5 seconds.","*User can add product to cart","*<p>This is Add Product to Cart TEST\x3c/p>","*Smoke","*Button with locator 'id=add-to-cart-button' not found.","*User must sign in to checkout","*<p>This is Sign In to Checkout TEST\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:18","fail":1,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:38","fail":0,"label":"Current","pass":1,"skip":0},{"elapsed":"00:00:36","fail":1,"label":"Smoke","pass":0,"skip":0}],[{"elapsed":"00:01:19","fail":1,"id":"s1","label":"Amazon","name":"Amazon","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:26","fail":3,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:30","fail":1,"label":"Current","pass":1,"skip":0},{"elapsed":"00:00:51","fail":2,"label":"Smoke","pass":0,"skip":0}],[{"elapsed":"00:01:27","fail":3,"id":"s1","label":"Amazon","name":"Amazon","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1739813683012;
+window.output["baseMillis"] = 1739973814892;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 78758;
+window.output["generated"] = 86813;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
