--- a/Results/report.html
+++ b/Results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,86735],[],[[5,0,0,[],[1,736,4779],[]],[6,0,7,[8],[1,5516,10332],[]],[9,0,10,[8],[0,15850,20122,11],[]],[12,0,13,[14],[0,35976,28415,15],[]],[16,0,17,[14],[0,64394,22337,15],[]]],[],[5,2,3,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,87672],[],[[5,0,0,[],[0,640,4774,6],[]],[7,0,8,[9],[1,5416,10575],[]],[10,0,11,[9],[1,15994,20663],[]],[12,0,13,[14],[1,36658,25282],[]],[15,0,16,[14],[1,61944,25726],[]]],[],[5,4,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Amazon","*C:\\Users\\SURFACE\\Desktop\\CRM\\amazon_automation_test\\tests\\amazon.robot","*../tests/amazon.robot","*<p>first test\x3c/p>","*Should be able to login","*User can search for product","*<p>This is Search for Product TEST\x3c/p>","*Current","*User can search and view product","*<p>This is Search and View Product TEST\x3c/p>","*Text 'Back to results' did not appear in 5 seconds.","*User can add product to cart","*<p>This is Add Product to Cart TEST\x3c/p>","*Smoke","*Button with locator 'id=add-to-cart-button' not found.","*User must sign in to checkout","*<p>This is Sign In to Checkout TEST\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Amazon","*C:\\Users\\SURFACE\\Desktop\\CRM\\amazon_automation_test\\Tests\\amazon.robot","*../Tests/amazon.robot","*<p>first test\x3c/p>","*Should be able to login","*Button with locator 'id=continue' not found.","*User can search for product","*<p>This is Search for Product TEST\x3c/p>","*Current","*User can search and view product","*<p>This is Search and View Product TEST\x3c/p>","*User can add product to cart","*<p>This is Add Product to Cart TEST\x3c/p>","*Smoke","*User must sign in to checkout","*<p>This is Sign In to Checkout TEST\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:26","fail":3,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:30","fail":1,"label":"Current","pass":1,"skip":0},{"elapsed":"00:00:51","fail":2,"label":"Smoke","pass":0,"skip":0}],[{"elapsed":"00:01:27","fail":3,"id":"s1","label":"Amazon","name":"Amazon","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:27","fail":1,"label":"All Tests","pass":4,"skip":0}],[{"elapsed":"00:00:31","fail":0,"label":"Current","pass":2,"skip":0},{"elapsed":"00:00:51","fail":0,"label":"Smoke","pass":2,"skip":0}],[{"elapsed":"00:01:28","fail":1,"id":"s1","label":"Amazon","name":"Amazon","pass":4,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1739973814892;
+window.output["baseMillis"] = 1740056547264;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 86813;
+window.output["generated"] = 87727;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
